# libreoffice-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.txt  README.md  STATUS.md
crates/libreoffice-rs/: Cargo.toml  README.md
crates/libreoffice-rs/src/: lib.rs  main.rs  xlsx_eval.rs
crates/libreoffice-rs/tests/: clark_recalc.rs  helpers.rs  markdown_raster.rs  math_convert.rs  pdf_input.rs  tracked_changes.rs  tracked_changes_full.rs
crates/lo_app/: Cargo.toml
crates/lo_app/examples/: desktop_demo.rs
crates/lo_app/src/: lib.rs
crates/lo_base/: Cargo.toml
crates/lo_base/src/: html.rs  import.rs  lib.rs  pdf.rs  svg.rs
crates/lo_calc/: Cargo.toml
crates/lo_calc/src/: html.rs  import.rs  lib.rs  markdown.rs  pdf.rs  svg.rs  xlsx.rs
crates/lo_cli/: Cargo.toml  README.md
crates/lo_cli/examples/: bench.rs
crates/lo_cli/src/: main.rs
crates/lo_core/: Cargo.toml
crates/lo_core/src/: base.rs  calc.rs  cfb.rs  draw.rs  error.rs  geometry.rs  html.rs  impress.rs  lib.rs  math.rs  meta.rs  pdf.rs  pdf_canvas.rs  raster.rs  style.rs  svg.rs  units.rs  writer.rs  xml.rs  xml_parser.rs
crates/lo_draw/: Cargo.toml
crates/lo_draw/src/: import.rs  lib.rs  pdf.rs  svg.rs
crates/lo_impress/: Cargo.toml
crates/lo_impress/src/: chart.rs  html.rs  import.rs  lib.rs  markdown.rs  pdf.rs  pptx.rs  raster.rs  svg.rs
crates/lo_lok/: Cargo.toml
crates/lo_lok/examples/: demo.rs
crates/lo_lok/src/: lib.rs
crates/lo_math/: Cargo.toml
crates/lo_math/src/: import.rs  lib.rs
crates/lo_odf/: Cargo.toml
crates/lo_odf/src/: common.rs  database.rs  draw.rs  formula.rs  lib.rs  presentation.rs  spreadsheet.rs  text.rs
crates/lo_uno/: Cargo.toml
crates/lo_uno/src/: lib.rs
crates/lo_writer/: Cargo.toml
crates/lo_writer/src/: docx.rs  html.rs  import.rs  layout.rs  legacy_doc.rs  lib.rs  markdown.rs  pdf.rs  raster.rs  svg.rs
crates/lo_zip/: Cargo.toml
crates/lo_zip/src/: archive.rs  lib.rs
crates/lo_zip/tests/: inflate.rs
docs/: ARCHITECTURE.md  quality_benchmark_results.tsv  quality_benchmark_results.txt
examples/: formula.txt  sample.csv  sample.md
skills/libreoffice-rs/: SKILL.md
tests/: benchmark.sh  desktop_demo_integration.sh  full_evidence_benchmark.sh  libreoffice_integration.sh  matrix_speed_comparison.py  office_demo_integration.sh  quality_benchmark.sh
