[workspace]
members = [
    "crates/lo_core",
    "crates/lo_zip",
    "crates/lo_odf",
    "crates/lo_writer",
    "crates/lo_calc",
    "crates/lo_impress",
    "crates/lo_draw",
    "crates/lo_math",
    "crates/lo_base",
    "crates/lo_uno",
    "crates/lo_lok",
    "crates/lo_cli",
    "crates/lo_app",
    "crates/libreoffice-rs",  # package name: libreoffice-pure
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.4.3"
authors = ["Stan Kirdey"]
repository = "https://github.com/clark-labs-inc/libreoffice-rs"
description = "A pure-Rust LibreOffice-inspired workspace"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

