[package]
name = "lo_app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Desktop application surface (start center, templates, recent files, autosave, macros, per-window HTML shells) over the lo_lok runtime"
readme = "README.md"

[dependencies]
lo_core = { path = "../lo_core", version = "0.4.6" }
lo_lok = { path = "../lo_lok", version = "0.4.6" }
lo_uno = { path = "../lo_uno", version = "0.4.6" }
