[package]
name = "lo_calc"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Spreadsheet formula parser/evaluator and CSV conversion"
readme = "README.md"

[dependencies]
lo_core = { path = "../lo_core", version = "0.4.7" }
lo_odf = { path = "../lo_odf", version = "0.4.7" }
lo_zip = { path = "../lo_zip", version = "0.4.7" }
