[package]
name = "lo_impress"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Presentation slide deck builder with ODP export"
readme = "README.md"

[dependencies]
lo_core = { path = "../lo_core", version = "0.4.4" }
lo_odf = { path = "../lo_odf", version = "0.4.4" }
lo_zip = { path = "../lo_zip", version = "0.4.4" }
