[package]
name = "lo_lok"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "LibreOfficeKit-like in-process runtime: Office handle, document handles, command dispatch and tile rendering"
readme = "README.md"

[dependencies]
lo_core = { path = "../lo_core", version = "0.4.5" }
lo_uno = { path = "../lo_uno", version = "0.4.5" }
lo_writer = { path = "../lo_writer", version = "0.4.5" }
lo_calc = { path = "../lo_calc", version = "0.4.5" }
lo_impress = { path = "../lo_impress", version = "0.4.5" }
lo_draw = { path = "../lo_draw", version = "0.4.5" }
lo_math = { path = "../lo_math", version = "0.4.5" }
lo_base = { path = "../lo_base", version = "0.4.5" }
