[package]
name = "lo_writer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Writer-like document editing with Markdown and plain text import/export"
readme = "README.md"

[dependencies]
lo_core = { path = "../lo_core", version = "0.4.4" }
lo_odf = { path = "../lo_odf", version = "0.4.4" }
lo_zip = { path = "../lo_zip", version = "0.4.4" }
