[package]
name = "lo_zip"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Minimal pure-Rust ZIP reader/writer for ODF packages"
readme = "README.md"

[dependencies]
lo_core = { path = "../lo_core", version = "0.4.5" }
